// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`orders .cancel() should return the canceled order when it could be canceled 1`] = `
Order {
  "_embedded": Object {
    "payments": Array [
      Payment {
        "_embedded": null,
        "_links": Object {
          "checkout": Object {
            "href": "https://www.mollie.com/payscreen/select-method/ncaPcAhuUV",
            "type": "text/html",
          },
          "order": Object {
            "href": "https://api.mollie.com/v2/orders/ord_kEn1PlbGa",
            "type": "application/hal+json",
          },
          "self": Object {
            "href": "https://api.mollie.com/v2/payments/tr_ncaPcAhuUV",
            "type": "application/hal+json",
          },
        },
        "amount": Object {
          "currency": "EUR",
          "value": "1027.99",
        },
        "amountCaptured": null,
        "amountRefunded": undefined,
        "amountRemaining": undefined,
        "applicationFee": undefined,
        "canceledAt": undefined,
        "countryCode": undefined,
        "createdAt": "2018-09-07T12:00:05+00:00",
        "customerId": undefined,
        "description": "Order #1337 (Lego cars)",
        "details": undefined,
        "expiredAt": undefined,
        "expiresAt": undefined,
        "failedAt": undefined,
        "id": "tr_ncaPcAhuUV",
        "isCancelable": false,
        "locale": "nl_NL",
        "mandateId": undefined,
        "metadata": null,
        "method": null,
        "mode": "live",
        "orderId": "ord_kEn1PlbGa",
        "paidAt": undefined,
        "profileId": "pfl_URR55HPMGx",
        "redirectUrl": "https://example.org/redirect",
        "resource": "payment",
        "sequenceType": "oneoff",
        "settlementAmount": undefined,
        "settlementId": undefined,
        "status": "open",
        "subscriptionId": undefined,
        "webhookUrl": undefined,
      },
    ],
  },
  "_links": Object {
    "checkout": Object {
      "href": "https://www.mollie.com/payscreen/order/checkout/pbjz8x",
      "type": "text/html",
    },
    "documentation": Object {
      "href": "https://docs.mollie.com/reference/v2/orders-api/get-order",
      "type": "text/html",
    },
    "self": Object {
      "href": "https://api.mollie.com/v2/orders/ord_pbjz8x",
      "type": "application/hal+json",
    },
  },
  "amount": Object {
    "currency": "EUR",
    "value": "1027.99",
  },
  "amountCaptured": undefined,
  "amountRefunded": undefined,
  "authorizedAt": undefined,
  "billingAddress": Object {
    "city": "Amsterdam",
    "country": "nl",
    "email": "luke@skywalker.com",
    "familyName": "Skywalker",
    "givenName": "Luke",
    "organizationName": "Mollie B.V.",
    "postalCode": "1016 EE",
    "streetAndNumber": "Keizersgracht 313",
  },
  "canceledAt": undefined,
  "completedAt": undefined,
  "consumerDateOfBirth": undefined,
  "createdAt": "2018-08-02T09:29:56+00:00",
  "expiredAt": undefined,
  "expiresAt": "2018-08-30T09:29:56+00:00",
  "id": "ord_kEn1PlbGa",
  "isCancelable": true,
  "lines": Array [
    Object {
      "_links": Object {
        "imageUrl": Object {
          "href": "https://sh-s7-live-s.legocdn.com/is/image//LEGO/42083_alt1?$main$",
          "type": "text/html",
        },
        "productUrl": Object {
          "href": "https://shop.lego.com/nl-NL/Bugatti-Chiron-42083",
          "type": "text/html",
        },
      },
      "amountCanceled": Object {
        "currency": "EUR",
        "value": "0.00",
      },
      "amountRefunded": Object {
        "currency": "EUR",
        "value": "0.00",
      },
      "amountShipped": Object {
        "currency": "EUR",
        "value": "0.00",
      },
      "cancelableQuantity": 0,
      "createdAt": "2018-08-02T09:29:56+00:00",
      "discountAmount": Object {
        "currency": "EUR",
        "value": "100.00",
      },
      "id": "odl_dgtxyl",
      "isCancelable": false,
      "metadata": null,
      "name": "LEGO 42083 Bugatti Chiron",
      "orderId": "ord_pbjz8x",
      "quantity": 2,
      "quantityCanceled": 0,
      "quantityRefunded": 0,
      "quantityShipped": 0,
      "refundableQuantity": 0,
      "resource": "orderline",
      "shippableQuantity": 0,
      "sku": "5702016116977",
      "status": "created",
      "totalAmount": Object {
        "currency": "EUR",
        "value": "698.00",
      },
      "type": "physical",
      "unitPrice": Object {
        "currency": "EUR",
        "value": "399.00",
      },
      "vatAmount": Object {
        "currency": "EUR",
        "value": "121.14",
      },
      "vatRate": "21.00",
    },
    Object {
      "_links": Object {
        "imageUrl": Object {
          "href": "https://sh-s7-live-s.legocdn.com/is/image/LEGO/42056?$PDPDefault$",
          "type": "text/html",
        },
        "productUrl": Object {
          "href": "https://shop.lego.com/nl-NL/Porsche-911-GT3-RS-42056",
          "type": "text/html",
        },
      },
      "amountCanceled": Object {
        "currency": "EUR",
        "value": "0.00",
      },
      "amountRefunded": Object {
        "currency": "EUR",
        "value": "0.00",
      },
      "amountShipped": Object {
        "currency": "EUR",
        "value": "0.00",
      },
      "cancelableQuantity": 0,
      "createdAt": "2018-08-02T09:29:56+00:00",
      "id": "odl_jp31jz",
      "isCancelable": false,
      "metadata": null,
      "name": "LEGO 42056 Porsche 911 GT3 RS",
      "orderId": "ord_pbjz8x",
      "quantity": 1,
      "quantityCanceled": 0,
      "quantityRefunded": 0,
      "quantityShipped": 0,
      "refundableQuantity": 0,
      "resource": "orderline",
      "shippableQuantity": 0,
      "sku": "5702015594028",
      "status": "created",
      "totalAmount": Object {
        "currency": "EUR",
        "value": "329.99",
      },
      "type": "physical",
      "unitPrice": Object {
        "currency": "EUR",
        "value": "329.99",
      },
      "vatAmount": Object {
        "currency": "EUR",
        "value": "57.27",
      },
      "vatRate": "21.00",
    },
  ],
  "locale": "nl_NL",
  "metadata": null,
  "method": "ideal",
  "mode": "live",
  "orderNumber": "18475",
  "paidAt": undefined,
  "profileId": "pfl_URR55HPMGx",
  "redirectUrl": "https://example.org/redirect",
  "resource": "order",
  "shippingAddress": Object {
    "city": "Amsterdam",
    "country": "nl",
    "email": "luke@skywalker.com",
    "familyName": "Skywalker",
    "givenName": "Luke",
    "organizationName": "Mollie B.V.",
    "postalCode": "1016 EE",
    "streetAndNumber": "Keizersgracht 313",
  },
  "status": "created",
  "webhookUrl": undefined,
}
`;

exports[`orders .create() should return an order instance 1`] = `
Order {
  "_embedded": Object {
    "payments": Array [
      Payment {
        "_embedded": null,
        "_links": Object {
          "checkout": Object {
            "href": "https://www.mollie.com/payscreen/select-method/ncaPcAhuUV",
            "type": "text/html",
          },
          "order": Object {
            "href": "https://api.mollie.com/v2/orders/ord_kEn1PlbGa",
            "type": "application/hal+json",
          },
          "self": Object {
            "href": "https://api.mollie.com/v2/payments/tr_ncaPcAhuUV",
            "type": "application/hal+json",
          },
        },
        "amount": Object {
          "currency": "EUR",
          "value": "1027.99",
        },
        "amountCaptured": null,
        "amountRefunded": undefined,
        "amountRemaining": undefined,
        "applicationFee": undefined,
        "canceledAt": undefined,
        "countryCode": undefined,
        "createdAt": "2018-09-07T12:00:05+00:00",
        "customerId": undefined,
        "description": "Order #1337 (Lego cars)",
        "details": undefined,
        "expiredAt": undefined,
        "expiresAt": undefined,
        "failedAt": undefined,
        "id": "tr_ncaPcAhuUV",
        "isCancelable": false,
        "locale": "nl_NL",
        "mandateId": undefined,
        "metadata": null,
        "method": null,
        "mode": "live",
        "orderId": "ord_kEn1PlbGa",
        "paidAt": undefined,
        "profileId": "pfl_URR55HPMGx",
        "redirectUrl": "https://example.org/redirect",
        "resource": "payment",
        "sequenceType": "oneoff",
        "settlementAmount": undefined,
        "settlementId": undefined,
        "status": "open",
        "subscriptionId": undefined,
        "webhookUrl": undefined,
      },
    ],
  },
  "_links": Object {
    "checkout": Object {
      "href": "https://www.mollie.com/payscreen/order/checkout/pbjz8x",
      "type": "text/html",
    },
    "documentation": Object {
      "href": "https://docs.mollie.com/reference/v2/orders-api/get-order",
      "type": "text/html",
    },
    "self": Object {
      "href": "https://api.mollie.com/v2/orders/ord_pbjz8x",
      "type": "application/hal+json",
    },
  },
  "amount": Object {
    "currency": "EUR",
    "value": "1027.99",
  },
  "amountCaptured": undefined,
  "amountRefunded": undefined,
  "authorizedAt": undefined,
  "billingAddress": Object {
    "city": "Amsterdam",
    "country": "nl",
    "email": "luke@skywalker.com",
    "familyName": "Skywalker",
    "givenName": "Luke",
    "organizationName": "Mollie B.V.",
    "postalCode": "1016 EE",
    "streetAndNumber": "Keizersgracht 313",
  },
  "canceledAt": undefined,
  "completedAt": undefined,
  "consumerDateOfBirth": undefined,
  "createdAt": "2018-08-02T09:29:56+00:00",
  "expiredAt": undefined,
  "expiresAt": "2018-08-30T09:29:56+00:00",
  "id": "ord_kEn1PlbGa",
  "isCancelable": true,
  "lines": Array [
    Object {
      "_links": Object {
        "imageUrl": Object {
          "href": "https://sh-s7-live-s.legocdn.com/is/image//LEGO/42083_alt1?$main$",
          "type": "text/html",
        },
        "productUrl": Object {
          "href": "https://shop.lego.com/nl-NL/Bugatti-Chiron-42083",
          "type": "text/html",
        },
      },
      "amountCanceled": Object {
        "currency": "EUR",
        "value": "0.00",
      },
      "amountRefunded": Object {
        "currency": "EUR",
        "value": "0.00",
      },
      "amountShipped": Object {
        "currency": "EUR",
        "value": "0.00",
      },
      "cancelableQuantity": 0,
      "createdAt": "2018-08-02T09:29:56+00:00",
      "discountAmount": Object {
        "currency": "EUR",
        "value": "100.00",
      },
      "id": "odl_dgtxyl",
      "isCancelable": false,
      "metadata": null,
      "name": "LEGO 42083 Bugatti Chiron",
      "orderId": "ord_pbjz8x",
      "quantity": 2,
      "quantityCanceled": 0,
      "quantityRefunded": 0,
      "quantityShipped": 0,
      "refundableQuantity": 0,
      "resource": "orderline",
      "shippableQuantity": 0,
      "sku": "5702016116977",
      "status": "created",
      "totalAmount": Object {
        "currency": "EUR",
        "value": "698.00",
      },
      "type": "physical",
      "unitPrice": Object {
        "currency": "EUR",
        "value": "399.00",
      },
      "vatAmount": Object {
        "currency": "EUR",
        "value": "121.14",
      },
      "vatRate": "21.00",
    },
    Object {
      "_links": Object {
        "imageUrl": Object {
          "href": "https://sh-s7-live-s.legocdn.com/is/image/LEGO/42056?$PDPDefault$",
          "type": "text/html",
        },
        "productUrl": Object {
          "href": "https://shop.lego.com/nl-NL/Porsche-911-GT3-RS-42056",
          "type": "text/html",
        },
      },
      "amountCanceled": Object {
        "currency": "EUR",
        "value": "0.00",
      },
      "amountRefunded": Object {
        "currency": "EUR",
        "value": "0.00",
      },
      "amountShipped": Object {
        "currency": "EUR",
        "value": "0.00",
      },
      "cancelableQuantity": 0,
      "createdAt": "2018-08-02T09:29:56+00:00",
      "id": "odl_jp31jz",
      "isCancelable": false,
      "metadata": null,
      "name": "LEGO 42056 Porsche 911 GT3 RS",
      "orderId": "ord_pbjz8x",
      "quantity": 1,
      "quantityCanceled": 0,
      "quantityRefunded": 0,
      "quantityShipped": 0,
      "refundableQuantity": 0,
      "resource": "orderline",
      "shippableQuantity": 0,
      "sku": "5702015594028",
      "status": "created",
      "totalAmount": Object {
        "currency": "EUR",
        "value": "329.99",
      },
      "type": "physical",
      "unitPrice": Object {
        "currency": "EUR",
        "value": "329.99",
      },
      "vatAmount": Object {
        "currency": "EUR",
        "value": "57.27",
      },
      "vatRate": "21.00",
    },
  ],
  "locale": "nl_NL",
  "metadata": null,
  "method": "ideal",
  "mode": "live",
  "orderNumber": "18475",
  "paidAt": undefined,
  "profileId": "pfl_URR55HPMGx",
  "redirectUrl": "https://example.org/redirect",
  "resource": "order",
  "shippingAddress": Object {
    "city": "Amsterdam",
    "country": "nl",
    "email": "luke@skywalker.com",
    "familyName": "Skywalker",
    "givenName": "Luke",
    "organizationName": "Mollie B.V.",
    "postalCode": "1016 EE",
    "streetAndNumber": "Keizersgracht 313",
  },
  "status": "created",
  "webhookUrl": undefined,
}
`;

exports[`orders .create() should work with a callback 1`] = `
Order {
  "_embedded": Object {
    "payments": Array [
      Payment {
        "_embedded": null,
        "_links": Object {
          "checkout": Object {
            "href": "https://www.mollie.com/payscreen/select-method/ncaPcAhuUV",
            "type": "text/html",
          },
          "order": Object {
            "href": "https://api.mollie.com/v2/orders/ord_kEn1PlbGa",
            "type": "application/hal+json",
          },
          "self": Object {
            "href": "https://api.mollie.com/v2/payments/tr_ncaPcAhuUV",
            "type": "application/hal+json",
          },
        },
        "amount": Object {
          "currency": "EUR",
          "value": "1027.99",
        },
        "amountCaptured": null,
        "amountRefunded": undefined,
        "amountRemaining": undefined,
        "applicationFee": undefined,
        "canceledAt": undefined,
        "countryCode": undefined,
        "createdAt": "2018-09-07T12:00:05+00:00",
        "customerId": undefined,
        "description": "Order #1337 (Lego cars)",
        "details": undefined,
        "expiredAt": undefined,
        "expiresAt": undefined,
        "failedAt": undefined,
        "id": "tr_ncaPcAhuUV",
        "isCancelable": false,
        "locale": "nl_NL",
        "mandateId": undefined,
        "metadata": null,
        "method": null,
        "mode": "live",
        "orderId": "ord_kEn1PlbGa",
        "paidAt": undefined,
        "profileId": "pfl_URR55HPMGx",
        "redirectUrl": "https://example.org/redirect",
        "resource": "payment",
        "sequenceType": "oneoff",
        "settlementAmount": undefined,
        "settlementId": undefined,
        "status": "open",
        "subscriptionId": undefined,
        "webhookUrl": undefined,
      },
    ],
  },
  "_links": Object {
    "checkout": Object {
      "href": "https://www.mollie.com/payscreen/order/checkout/pbjz8x",
      "type": "text/html",
    },
    "documentation": Object {
      "href": "https://docs.mollie.com/reference/v2/orders-api/get-order",
      "type": "text/html",
    },
    "self": Object {
      "href": "https://api.mollie.com/v2/orders/ord_pbjz8x",
      "type": "application/hal+json",
    },
  },
  "amount": Object {
    "currency": "EUR",
    "value": "1027.99",
  },
  "amountCaptured": undefined,
  "amountRefunded": undefined,
  "authorizedAt": undefined,
  "billingAddress": Object {
    "city": "Amsterdam",
    "country": "nl",
    "email": "luke@skywalker.com",
    "familyName": "Skywalker",
    "givenName": "Luke",
    "organizationName": "Mollie B.V.",
    "postalCode": "1016 EE",
    "streetAndNumber": "Keizersgracht 313",
  },
  "canceledAt": undefined,
  "completedAt": undefined,
  "consumerDateOfBirth": undefined,
  "createdAt": "2018-08-02T09:29:56+00:00",
  "expiredAt": undefined,
  "expiresAt": "2018-08-30T09:29:56+00:00",
  "id": "ord_kEn1PlbGa",
  "isCancelable": true,
  "lines": Array [
    Object {
      "_links": Object {
        "imageUrl": Object {
          "href": "https://sh-s7-live-s.legocdn.com/is/image//LEGO/42083_alt1?$main$",
          "type": "text/html",
        },
        "productUrl": Object {
          "href": "https://shop.lego.com/nl-NL/Bugatti-Chiron-42083",
          "type": "text/html",
        },
      },
      "amountCanceled": Object {
        "currency": "EUR",
        "value": "0.00",
      },
      "amountRefunded": Object {
        "currency": "EUR",
        "value": "0.00",
      },
      "amountShipped": Object {
        "currency": "EUR",
        "value": "0.00",
      },
      "cancelableQuantity": 0,
      "createdAt": "2018-08-02T09:29:56+00:00",
      "discountAmount": Object {
        "currency": "EUR",
        "value": "100.00",
      },
      "id": "odl_dgtxyl",
      "isCancelable": false,
      "metadata": null,
      "name": "LEGO 42083 Bugatti Chiron",
      "orderId": "ord_pbjz8x",
      "quantity": 2,
      "quantityCanceled": 0,
      "quantityRefunded": 0,
      "quantityShipped": 0,
      "refundableQuantity": 0,
      "resource": "orderline",
      "shippableQuantity": 0,
      "sku": "5702016116977",
      "status": "created",
      "totalAmount": Object {
        "currency": "EUR",
        "value": "698.00",
      },
      "type": "physical",
      "unitPrice": Object {
        "currency": "EUR",
        "value": "399.00",
      },
      "vatAmount": Object {
        "currency": "EUR",
        "value": "121.14",
      },
      "vatRate": "21.00",
    },
    Object {
      "_links": Object {
        "imageUrl": Object {
          "href": "https://sh-s7-live-s.legocdn.com/is/image/LEGO/42056?$PDPDefault$",
          "type": "text/html",
        },
        "productUrl": Object {
          "href": "https://shop.lego.com/nl-NL/Porsche-911-GT3-RS-42056",
          "type": "text/html",
        },
      },
      "amountCanceled": Object {
        "currency": "EUR",
        "value": "0.00",
      },
      "amountRefunded": Object {
        "currency": "EUR",
        "value": "0.00",
      },
      "amountShipped": Object {
        "currency": "EUR",
        "value": "0.00",
      },
      "cancelableQuantity": 0,
      "createdAt": "2018-08-02T09:29:56+00:00",
      "id": "odl_jp31jz",
      "isCancelable": false,
      "metadata": null,
      "name": "LEGO 42056 Porsche 911 GT3 RS",
      "orderId": "ord_pbjz8x",
      "quantity": 1,
      "quantityCanceled": 0,
      "quantityRefunded": 0,
      "quantityShipped": 0,
      "refundableQuantity": 0,
      "resource": "orderline",
      "shippableQuantity": 0,
      "sku": "5702015594028",
      "status": "created",
      "totalAmount": Object {
        "currency": "EUR",
        "value": "329.99",
      },
      "type": "physical",
      "unitPrice": Object {
        "currency": "EUR",
        "value": "329.99",
      },
      "vatAmount": Object {
        "currency": "EUR",
        "value": "57.27",
      },
      "vatRate": "21.00",
    },
  ],
  "locale": "nl_NL",
  "metadata": null,
  "method": "ideal",
  "mode": "live",
  "orderNumber": "18475",
  "paidAt": undefined,
  "profileId": "pfl_URR55HPMGx",
  "redirectUrl": "https://example.org/redirect",
  "resource": "order",
  "shippingAddress": Object {
    "city": "Amsterdam",
    "country": "nl",
    "email": "luke@skywalker.com",
    "familyName": "Skywalker",
    "givenName": "Luke",
    "organizationName": "Mollie B.V.",
    "postalCode": "1016 EE",
    "streetAndNumber": "Keizersgracht 313",
  },
  "status": "created",
  "webhookUrl": undefined,
}
`;

exports[`orders .get() should return an order instance 1`] = `
Order {
  "_embedded": Object {
    "payments": Array [
      Payment {
        "_embedded": null,
        "_links": Object {
          "checkout": Object {
            "href": "https://www.mollie.com/payscreen/select-method/ncaPcAhuUV",
            "type": "text/html",
          },
          "order": Object {
            "href": "https://api.mollie.com/v2/orders/ord_kEn1PlbGa",
            "type": "application/hal+json",
          },
          "self": Object {
            "href": "https://api.mollie.com/v2/payments/tr_ncaPcAhuUV",
            "type": "application/hal+json",
          },
        },
        "amount": Object {
          "currency": "EUR",
          "value": "1027.99",
        },
        "amountCaptured": null,
        "amountRefunded": undefined,
        "amountRemaining": undefined,
        "applicationFee": undefined,
        "canceledAt": undefined,
        "countryCode": undefined,
        "createdAt": "2018-09-07T12:00:05+00:00",
        "customerId": undefined,
        "description": "Order #1337 (Lego cars)",
        "details": undefined,
        "expiredAt": undefined,
        "expiresAt": undefined,
        "failedAt": undefined,
        "id": "tr_ncaPcAhuUV",
        "isCancelable": false,
        "locale": "nl_NL",
        "mandateId": undefined,
        "metadata": null,
        "method": null,
        "mode": "live",
        "orderId": "ord_kEn1PlbGa",
        "paidAt": undefined,
        "profileId": "pfl_URR55HPMGx",
        "redirectUrl": "https://example.org/redirect",
        "resource": "payment",
        "sequenceType": "oneoff",
        "settlementAmount": undefined,
        "settlementId": undefined,
        "status": "open",
        "subscriptionId": undefined,
        "webhookUrl": undefined,
      },
    ],
  },
  "_links": Object {
    "checkout": Object {
      "href": "https://www.mollie.com/payscreen/order/checkout/pbjz8x",
      "type": "text/html",
    },
    "documentation": Object {
      "href": "https://docs.mollie.com/reference/v2/orders-api/get-order",
      "type": "text/html",
    },
    "self": Object {
      "href": "https://api.mollie.com/v2/orders/ord_pbjz8x",
      "type": "application/hal+json",
    },
  },
  "amount": Object {
    "currency": "EUR",
    "value": "1027.99",
  },
  "amountCaptured": undefined,
  "amountRefunded": undefined,
  "authorizedAt": undefined,
  "billingAddress": Object {
    "city": "Amsterdam",
    "country": "nl",
    "email": "luke@skywalker.com",
    "familyName": "Skywalker",
    "givenName": "Luke",
    "organizationName": "Mollie B.V.",
    "postalCode": "1016 EE",
    "streetAndNumber": "Keizersgracht 313",
  },
  "canceledAt": undefined,
  "completedAt": undefined,
  "consumerDateOfBirth": undefined,
  "createdAt": "2018-08-02T09:29:56+00:00",
  "expiredAt": undefined,
  "expiresAt": "2018-08-30T09:29:56+00:00",
  "id": "ord_kEn1PlbGa",
  "isCancelable": true,
  "lines": Array [
    Object {
      "_links": Object {
        "imageUrl": Object {
          "href": "https://sh-s7-live-s.legocdn.com/is/image//LEGO/42083_alt1?$main$",
          "type": "text/html",
        },
        "productUrl": Object {
          "href": "https://shop.lego.com/nl-NL/Bugatti-Chiron-42083",
          "type": "text/html",
        },
      },
      "amountCanceled": Object {
        "currency": "EUR",
        "value": "0.00",
      },
      "amountRefunded": Object {
        "currency": "EUR",
        "value": "0.00",
      },
      "amountShipped": Object {
        "currency": "EUR",
        "value": "0.00",
      },
      "cancelableQuantity": 0,
      "createdAt": "2018-08-02T09:29:56+00:00",
      "discountAmount": Object {
        "currency": "EUR",
        "value": "100.00",
      },
      "id": "odl_dgtxyl",
      "isCancelable": false,
      "metadata": null,
      "name": "LEGO 42083 Bugatti Chiron",
      "orderId": "ord_pbjz8x",
      "quantity": 2,
      "quantityCanceled": 0,
      "quantityRefunded": 0,
      "quantityShipped": 0,
      "refundableQuantity": 0,
      "resource": "orderline",
      "shippableQuantity": 0,
      "sku": "5702016116977",
      "status": "created",
      "totalAmount": Object {
        "currency": "EUR",
        "value": "698.00",
      },
      "type": "physical",
      "unitPrice": Object {
        "currency": "EUR",
        "value": "399.00",
      },
      "vatAmount": Object {
        "currency": "EUR",
        "value": "121.14",
      },
      "vatRate": "21.00",
    },
    Object {
      "_links": Object {
        "imageUrl": Object {
          "href": "https://sh-s7-live-s.legocdn.com/is/image/LEGO/42056?$PDPDefault$",
          "type": "text/html",
        },
        "productUrl": Object {
          "href": "https://shop.lego.com/nl-NL/Porsche-911-GT3-RS-42056",
          "type": "text/html",
        },
      },
      "amountCanceled": Object {
        "currency": "EUR",
        "value": "0.00",
      },
      "amountRefunded": Object {
        "currency": "EUR",
        "value": "0.00",
      },
      "amountShipped": Object {
        "currency": "EUR",
        "value": "0.00",
      },
      "cancelableQuantity": 0,
      "createdAt": "2018-08-02T09:29:56+00:00",
      "id": "odl_jp31jz",
      "isCancelable": false,
      "metadata": null,
      "name": "LEGO 42056 Porsche 911 GT3 RS",
      "orderId": "ord_pbjz8x",
      "quantity": 1,
      "quantityCanceled": 0,
      "quantityRefunded": 0,
      "quantityShipped": 0,
      "refundableQuantity": 0,
      "resource": "orderline",
      "shippableQuantity": 0,
      "sku": "5702015594028",
      "status": "created",
      "totalAmount": Object {
        "currency": "EUR",
        "value": "329.99",
      },
      "type": "physical",
      "unitPrice": Object {
        "currency": "EUR",
        "value": "329.99",
      },
      "vatAmount": Object {
        "currency": "EUR",
        "value": "57.27",
      },
      "vatRate": "21.00",
    },
  ],
  "locale": "nl_NL",
  "metadata": null,
  "method": "ideal",
  "mode": "live",
  "orderNumber": "18475",
  "paidAt": undefined,
  "profileId": "pfl_URR55HPMGx",
  "redirectUrl": "https://example.org/redirect",
  "resource": "order",
  "shippingAddress": Object {
    "city": "Amsterdam",
    "country": "nl",
    "email": "luke@skywalker.com",
    "familyName": "Skywalker",
    "givenName": "Luke",
    "organizationName": "Mollie B.V.",
    "postalCode": "1016 EE",
    "streetAndNumber": "Keizersgracht 313",
  },
  "status": "created",
  "webhookUrl": undefined,
}
`;

exports[`orders .get() should work with a callback 1`] = `
Order {
  "_embedded": Object {
    "payments": Array [
      Payment {
        "_embedded": null,
        "_links": Object {
          "checkout": Object {
            "href": "https://www.mollie.com/payscreen/select-method/ncaPcAhuUV",
            "type": "text/html",
          },
          "order": Object {
            "href": "https://api.mollie.com/v2/orders/ord_kEn1PlbGa",
            "type": "application/hal+json",
          },
          "self": Object {
            "href": "https://api.mollie.com/v2/payments/tr_ncaPcAhuUV",
            "type": "application/hal+json",
          },
        },
        "amount": Object {
          "currency": "EUR",
          "value": "1027.99",
        },
        "amountCaptured": null,
        "amountRefunded": undefined,
        "amountRemaining": undefined,
        "applicationFee": undefined,
        "canceledAt": undefined,
        "countryCode": undefined,
        "createdAt": "2018-09-07T12:00:05+00:00",
        "customerId": undefined,
        "description": "Order #1337 (Lego cars)",
        "details": undefined,
        "expiredAt": undefined,
        "expiresAt": undefined,
        "failedAt": undefined,
        "id": "tr_ncaPcAhuUV",
        "isCancelable": false,
        "locale": "nl_NL",
        "mandateId": undefined,
        "metadata": null,
        "method": null,
        "mode": "live",
        "orderId": "ord_kEn1PlbGa",
        "paidAt": undefined,
        "profileId": "pfl_URR55HPMGx",
        "redirectUrl": "https://example.org/redirect",
        "resource": "payment",
        "sequenceType": "oneoff",
        "settlementAmount": undefined,
        "settlementId": undefined,
        "status": "open",
        "subscriptionId": undefined,
        "webhookUrl": undefined,
      },
    ],
  },
  "_links": Object {
    "checkout": Object {
      "href": "https://www.mollie.com/payscreen/order/checkout/pbjz8x",
      "type": "text/html",
    },
    "documentation": Object {
      "href": "https://docs.mollie.com/reference/v2/orders-api/get-order",
      "type": "text/html",
    },
    "self": Object {
      "href": "https://api.mollie.com/v2/orders/ord_pbjz8x",
      "type": "application/hal+json",
    },
  },
  "amount": Object {
    "currency": "EUR",
    "value": "1027.99",
  },
  "amountCaptured": undefined,
  "amountRefunded": undefined,
  "authorizedAt": undefined,
  "billingAddress": Object {
    "city": "Amsterdam",
    "country": "nl",
    "email": "luke@skywalker.com",
    "familyName": "Skywalker",
    "givenName": "Luke",
    "organizationName": "Mollie B.V.",
    "postalCode": "1016 EE",
    "streetAndNumber": "Keizersgracht 313",
  },
  "canceledAt": undefined,
  "completedAt": undefined,
  "consumerDateOfBirth": undefined,
  "createdAt": "2018-08-02T09:29:56+00:00",
  "expiredAt": undefined,
  "expiresAt": "2018-08-30T09:29:56+00:00",
  "id": "ord_kEn1PlbGa",
  "isCancelable": true,
  "lines": Array [
    Object {
      "_links": Object {
        "imageUrl": Object {
          "href": "https://sh-s7-live-s.legocdn.com/is/image//LEGO/42083_alt1?$main$",
          "type": "text/html",
        },
        "productUrl": Object {
          "href": "https://shop.lego.com/nl-NL/Bugatti-Chiron-42083",
          "type": "text/html",
        },
      },
      "amountCanceled": Object {
        "currency": "EUR",
        "value": "0.00",
      },
      "amountRefunded": Object {
        "currency": "EUR",
        "value": "0.00",
      },
      "amountShipped": Object {
        "currency": "EUR",
        "value": "0.00",
      },
      "cancelableQuantity": 0,
      "createdAt": "2018-08-02T09:29:56+00:00",
      "discountAmount": Object {
        "currency": "EUR",
        "value": "100.00",
      },
      "id": "odl_dgtxyl",
      "isCancelable": false,
      "metadata": null,
      "name": "LEGO 42083 Bugatti Chiron",
      "orderId": "ord_pbjz8x",
      "quantity": 2,
      "quantityCanceled": 0,
      "quantityRefunded": 0,
      "quantityShipped": 0,
      "refundableQuantity": 0,
      "resource": "orderline",
      "shippableQuantity": 0,
      "sku": "5702016116977",
      "status": "created",
      "totalAmount": Object {
        "currency": "EUR",
        "value": "698.00",
      },
      "type": "physical",
      "unitPrice": Object {
        "currency": "EUR",
        "value": "399.00",
      },
      "vatAmount": Object {
        "currency": "EUR",
        "value": "121.14",
      },
      "vatRate": "21.00",
    },
    Object {
      "_links": Object {
        "imageUrl": Object {
          "href": "https://sh-s7-live-s.legocdn.com/is/image/LEGO/42056?$PDPDefault$",
          "type": "text/html",
        },
        "productUrl": Object {
          "href": "https://shop.lego.com/nl-NL/Porsche-911-GT3-RS-42056",
          "type": "text/html",
        },
      },
      "amountCanceled": Object {
        "currency": "EUR",
        "value": "0.00",
      },
      "amountRefunded": Object {
        "currency": "EUR",
        "value": "0.00",
      },
      "amountShipped": Object {
        "currency": "EUR",
        "value": "0.00",
      },
      "cancelableQuantity": 0,
      "createdAt": "2018-08-02T09:29:56+00:00",
      "id": "odl_jp31jz",
      "isCancelable": false,
      "metadata": null,
      "name": "LEGO 42056 Porsche 911 GT3 RS",
      "orderId": "ord_pbjz8x",
      "quantity": 1,
      "quantityCanceled": 0,
      "quantityRefunded": 0,
      "quantityShipped": 0,
      "refundableQuantity": 0,
      "resource": "orderline",
      "shippableQuantity": 0,
      "sku": "5702015594028",
      "status": "created",
      "totalAmount": Object {
        "currency": "EUR",
        "value": "329.99",
      },
      "type": "physical",
      "unitPrice": Object {
        "currency": "EUR",
        "value": "329.99",
      },
      "vatAmount": Object {
        "currency": "EUR",
        "value": "57.27",
      },
      "vatRate": "21.00",
    },
  ],
  "locale": "nl_NL",
  "metadata": null,
  "method": "ideal",
  "mode": "live",
  "orderNumber": "18475",
  "paidAt": undefined,
  "profileId": "pfl_URR55HPMGx",
  "redirectUrl": "https://example.org/redirect",
  "resource": "order",
  "shippingAddress": Object {
    "city": "Amsterdam",
    "country": "nl",
    "email": "luke@skywalker.com",
    "familyName": "Skywalker",
    "givenName": "Luke",
    "organizationName": "Mollie B.V.",
    "postalCode": "1016 EE",
    "streetAndNumber": "Keizersgracht 313",
  },
  "status": "created",
  "webhookUrl": undefined,
}
`;

exports[`orders .list() should return a list of all orders 1`] = `
List [
  Order {
    "_embedded": Object {
      "payments": Array [
        Payment {
          "_embedded": null,
          "_links": Object {
            "checkout": Object {
              "href": "https://www.mollie.com/payscreen/select-method/ncaPcAhuUV",
              "type": "text/html",
            },
            "order": Object {
              "href": "https://api.mollie.com/v2/orders/ord_kEn1PlbGa",
              "type": "application/hal+json",
            },
            "self": Object {
              "href": "https://api.mollie.com/v2/payments/tr_ncaPcAhuUV",
              "type": "application/hal+json",
            },
          },
          "amount": Object {
            "currency": "EUR",
            "value": "1027.99",
          },
          "amountCaptured": null,
          "amountRefunded": undefined,
          "amountRemaining": undefined,
          "applicationFee": undefined,
          "canceledAt": undefined,
          "countryCode": undefined,
          "createdAt": "2018-09-07T12:00:05+00:00",
          "customerId": undefined,
          "description": "Order #1337 (Lego cars)",
          "details": undefined,
          "expiredAt": undefined,
          "expiresAt": undefined,
          "failedAt": undefined,
          "id": "tr_ncaPcAhuUV",
          "isCancelable": false,
          "locale": "nl_NL",
          "mandateId": undefined,
          "metadata": null,
          "method": null,
          "mode": "live",
          "orderId": "ord_kEn1PlbGa",
          "paidAt": undefined,
          "profileId": "pfl_URR55HPMGx",
          "redirectUrl": "https://example.org/redirect",
          "resource": "payment",
          "sequenceType": "oneoff",
          "settlementAmount": undefined,
          "settlementId": undefined,
          "status": "open",
          "subscriptionId": undefined,
          "webhookUrl": undefined,
        },
      ],
    },
    "_links": Object {
      "checkout": Object {
        "href": "https://www.mollie.com/payscreen/order/checkout/pbjz8x",
        "type": "text/html",
      },
      "documentation": Object {
        "href": "https://docs.mollie.com/reference/v2/orders-api/get-order",
        "type": "text/html",
      },
      "self": Object {
        "href": "https://api.mollie.com/v2/orders/ord_pbjz8x",
        "type": "application/hal+json",
      },
    },
    "amount": Object {
      "currency": "EUR",
      "value": "1027.99",
    },
    "amountCaptured": undefined,
    "amountRefunded": undefined,
    "authorizedAt": undefined,
    "billingAddress": Object {
      "city": "Amsterdam",
      "country": "nl",
      "email": "luke@skywalker.com",
      "familyName": "Skywalker",
      "givenName": "Luke",
      "organizationName": "Mollie B.V.",
      "postalCode": "1016 EE",
      "streetAndNumber": "Keizersgracht 313",
    },
    "canceledAt": undefined,
    "completedAt": undefined,
    "consumerDateOfBirth": undefined,
    "createdAt": "2018-08-02T09:29:56+00:00",
    "expiredAt": undefined,
    "expiresAt": "2018-08-30T09:29:56+00:00",
    "id": "ord_kEn1PlbGa",
    "isCancelable": true,
    "lines": Array [
      Object {
        "_links": Object {
          "imageUrl": Object {
            "href": "https://sh-s7-live-s.legocdn.com/is/image//LEGO/42083_alt1?$main$",
            "type": "text/html",
          },
          "productUrl": Object {
            "href": "https://shop.lego.com/nl-NL/Bugatti-Chiron-42083",
            "type": "text/html",
          },
        },
        "amountCanceled": Object {
          "currency": "EUR",
          "value": "0.00",
        },
        "amountRefunded": Object {
          "currency": "EUR",
          "value": "0.00",
        },
        "amountShipped": Object {
          "currency": "EUR",
          "value": "0.00",
        },
        "cancelableQuantity": 0,
        "createdAt": "2018-08-02T09:29:56+00:00",
        "discountAmount": Object {
          "currency": "EUR",
          "value": "100.00",
        },
        "id": "odl_dgtxyl",
        "isCancelable": false,
        "metadata": null,
        "name": "LEGO 42083 Bugatti Chiron",
        "orderId": "ord_pbjz8x",
        "quantity": 2,
        "quantityCanceled": 0,
        "quantityRefunded": 0,
        "quantityShipped": 0,
        "refundableQuantity": 0,
        "resource": "orderline",
        "shippableQuantity": 0,
        "sku": "5702016116977",
        "status": "created",
        "totalAmount": Object {
          "currency": "EUR",
          "value": "698.00",
        },
        "type": "physical",
        "unitPrice": Object {
          "currency": "EUR",
          "value": "399.00",
        },
        "vatAmount": Object {
          "currency": "EUR",
          "value": "121.14",
        },
        "vatRate": "21.00",
      },
      Object {
        "_links": Object {
          "imageUrl": Object {
            "href": "https://sh-s7-live-s.legocdn.com/is/image/LEGO/42056?$PDPDefault$",
            "type": "text/html",
          },
          "productUrl": Object {
            "href": "https://shop.lego.com/nl-NL/Porsche-911-GT3-RS-42056",
            "type": "text/html",
          },
        },
        "amountCanceled": Object {
          "currency": "EUR",
          "value": "0.00",
        },
        "amountRefunded": Object {
          "currency": "EUR",
          "value": "0.00",
        },
        "amountShipped": Object {
          "currency": "EUR",
          "value": "0.00",
        },
        "cancelableQuantity": 0,
        "createdAt": "2018-08-02T09:29:56+00:00",
        "id": "odl_jp31jz",
        "isCancelable": false,
        "metadata": null,
        "name": "LEGO 42056 Porsche 911 GT3 RS",
        "orderId": "ord_pbjz8x",
        "quantity": 1,
        "quantityCanceled": 0,
        "quantityRefunded": 0,
        "quantityShipped": 0,
        "refundableQuantity": 0,
        "resource": "orderline",
        "shippableQuantity": 0,
        "sku": "5702015594028",
        "status": "created",
        "totalAmount": Object {
          "currency": "EUR",
          "value": "329.99",
        },
        "type": "physical",
        "unitPrice": Object {
          "currency": "EUR",
          "value": "329.99",
        },
        "vatAmount": Object {
          "currency": "EUR",
          "value": "57.27",
        },
        "vatRate": "21.00",
      },
    ],
    "locale": "nl_NL",
    "metadata": null,
    "method": "ideal",
    "mode": "live",
    "orderNumber": "18475",
    "paidAt": undefined,
    "profileId": "pfl_URR55HPMGx",
    "redirectUrl": "https://example.org/redirect",
    "resource": "order",
    "shippingAddress": Object {
      "city": "Amsterdam",
      "country": "nl",
      "email": "luke@skywalker.com",
      "familyName": "Skywalker",
      "givenName": "Luke",
      "organizationName": "Mollie B.V.",
      "postalCode": "1016 EE",
      "streetAndNumber": "Keizersgracht 313",
    },
    "status": "created",
    "webhookUrl": undefined,
  },
]
`;

exports[`orders .list() should work with a callback 1`] = `
List [
  Order {
    "_embedded": Object {
      "payments": Array [
        Payment {
          "_embedded": null,
          "_links": Object {
            "checkout": Object {
              "href": "https://www.mollie.com/payscreen/select-method/ncaPcAhuUV",
              "type": "text/html",
            },
            "order": Object {
              "href": "https://api.mollie.com/v2/orders/ord_kEn1PlbGa",
              "type": "application/hal+json",
            },
            "self": Object {
              "href": "https://api.mollie.com/v2/payments/tr_ncaPcAhuUV",
              "type": "application/hal+json",
            },
          },
          "amount": Object {
            "currency": "EUR",
            "value": "1027.99",
          },
          "amountCaptured": null,
          "amountRefunded": undefined,
          "amountRemaining": undefined,
          "applicationFee": undefined,
          "canceledAt": undefined,
          "countryCode": undefined,
          "createdAt": "2018-09-07T12:00:05+00:00",
          "customerId": undefined,
          "description": "Order #1337 (Lego cars)",
          "details": undefined,
          "expiredAt": undefined,
          "expiresAt": undefined,
          "failedAt": undefined,
          "id": "tr_ncaPcAhuUV",
          "isCancelable": false,
          "locale": "nl_NL",
          "mandateId": undefined,
          "metadata": null,
          "method": null,
          "mode": "live",
          "orderId": "ord_kEn1PlbGa",
          "paidAt": undefined,
          "profileId": "pfl_URR55HPMGx",
          "redirectUrl": "https://example.org/redirect",
          "resource": "payment",
          "sequenceType": "oneoff",
          "settlementAmount": undefined,
          "settlementId": undefined,
          "status": "open",
          "subscriptionId": undefined,
          "webhookUrl": undefined,
        },
      ],
    },
    "_links": Object {
      "checkout": Object {
        "href": "https://www.mollie.com/payscreen/order/checkout/pbjz8x",
        "type": "text/html",
      },
      "documentation": Object {
        "href": "https://docs.mollie.com/reference/v2/orders-api/get-order",
        "type": "text/html",
      },
      "self": Object {
        "href": "https://api.mollie.com/v2/orders/ord_pbjz8x",
        "type": "application/hal+json",
      },
    },
    "amount": Object {
      "currency": "EUR",
      "value": "1027.99",
    },
    "amountCaptured": undefined,
    "amountRefunded": undefined,
    "authorizedAt": undefined,
    "billingAddress": Object {
      "city": "Amsterdam",
      "country": "nl",
      "email": "luke@skywalker.com",
      "familyName": "Skywalker",
      "givenName": "Luke",
      "organizationName": "Mollie B.V.",
      "postalCode": "1016 EE",
      "streetAndNumber": "Keizersgracht 313",
    },
    "canceledAt": undefined,
    "completedAt": undefined,
    "consumerDateOfBirth": undefined,
    "createdAt": "2018-08-02T09:29:56+00:00",
    "expiredAt": undefined,
    "expiresAt": "2018-08-30T09:29:56+00:00",
    "id": "ord_kEn1PlbGa",
    "isCancelable": true,
    "lines": Array [
      Object {
        "_links": Object {
          "imageUrl": Object {
            "href": "https://sh-s7-live-s.legocdn.com/is/image//LEGO/42083_alt1?$main$",
            "type": "text/html",
          },
          "productUrl": Object {
            "href": "https://shop.lego.com/nl-NL/Bugatti-Chiron-42083",
            "type": "text/html",
          },
        },
        "amountCanceled": Object {
          "currency": "EUR",
          "value": "0.00",
        },
        "amountRefunded": Object {
          "currency": "EUR",
          "value": "0.00",
        },
        "amountShipped": Object {
          "currency": "EUR",
          "value": "0.00",
        },
        "cancelableQuantity": 0,
        "createdAt": "2018-08-02T09:29:56+00:00",
        "discountAmount": Object {
          "currency": "EUR",
          "value": "100.00",
        },
        "id": "odl_dgtxyl",
        "isCancelable": false,
        "metadata": null,
        "name": "LEGO 42083 Bugatti Chiron",
        "orderId": "ord_pbjz8x",
        "quantity": 2,
        "quantityCanceled": 0,
        "quantityRefunded": 0,
        "quantityShipped": 0,
        "refundableQuantity": 0,
        "resource": "orderline",
        "shippableQuantity": 0,
        "sku": "5702016116977",
        "status": "created",
        "totalAmount": Object {
          "currency": "EUR",
          "value": "698.00",
        },
        "type": "physical",
        "unitPrice": Object {
          "currency": "EUR",
          "value": "399.00",
        },
        "vatAmount": Object {
          "currency": "EUR",
          "value": "121.14",
        },
        "vatRate": "21.00",
      },
      Object {
        "_links": Object {
          "imageUrl": Object {
            "href": "https://sh-s7-live-s.legocdn.com/is/image/LEGO/42056?$PDPDefault$",
            "type": "text/html",
          },
          "productUrl": Object {
            "href": "https://shop.lego.com/nl-NL/Porsche-911-GT3-RS-42056",
            "type": "text/html",
          },
        },
        "amountCanceled": Object {
          "currency": "EUR",
          "value": "0.00",
        },
        "amountRefunded": Object {
          "currency": "EUR",
          "value": "0.00",
        },
        "amountShipped": Object {
          "currency": "EUR",
          "value": "0.00",
        },
        "cancelableQuantity": 0,
        "createdAt": "2018-08-02T09:29:56+00:00",
        "id": "odl_jp31jz",
        "isCancelable": false,
        "metadata": null,
        "name": "LEGO 42056 Porsche 911 GT3 RS",
        "orderId": "ord_pbjz8x",
        "quantity": 1,
        "quantityCanceled": 0,
        "quantityRefunded": 0,
        "quantityShipped": 0,
        "refundableQuantity": 0,
        "resource": "orderline",
        "shippableQuantity": 0,
        "sku": "5702015594028",
        "status": "created",
        "totalAmount": Object {
          "currency": "EUR",
          "value": "329.99",
        },
        "type": "physical",
        "unitPrice": Object {
          "currency": "EUR",
          "value": "329.99",
        },
        "vatAmount": Object {
          "currency": "EUR",
          "value": "57.27",
        },
        "vatRate": "21.00",
      },
    ],
    "locale": "nl_NL",
    "metadata": null,
    "method": "ideal",
    "mode": "live",
    "orderNumber": "18475",
    "paidAt": undefined,
    "profileId": "pfl_URR55HPMGx",
    "redirectUrl": "https://example.org/redirect",
    "resource": "order",
    "shippingAddress": Object {
      "city": "Amsterdam",
      "country": "nl",
      "email": "luke@skywalker.com",
      "familyName": "Skywalker",
      "givenName": "Luke",
      "organizationName": "Mollie B.V.",
      "postalCode": "1016 EE",
      "streetAndNumber": "Keizersgracht 313",
    },
    "status": "created",
    "webhookUrl": undefined,
  },
]
`;
